# ros2_ws_lbt

./: .clang-format  .gitignore  backup.tar.xz  run.sh
config/: RobotConfig.yaml
launch/: unified_launch.py
src/: st.txt  structure.txt
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: ActuatorCmds.msg  CustomMessage.msg  MujocoMsg.msg  RobotStateMsg.msg  SensorMsg.msg  ToSimMsg.msg  ToUiMsg.msg
src/custom_msgs/msg/hardware_msg/: Instruction.msg  LowCmd.msg  LowState.msg  MotorCmd.msg  MotorError.msg  MotorState.msg  RobotError.msg
src/keyboard_control/: CMakeLists.txt  package.xml
src/keyboard_control/src/: keyboard_publisher.cpp
src/mujoco_node/: CMakeLists.txt
src/mujoco_node/include/mujoco_node/: MujocoMsgHandler.h  simulate.h
src/mujoco_node/models/: pendulum.xml
src/mujoco_node/models/quadruped/config/: joint_names_quadruped.yaml
src/mujoco_node/models/quadruped/launch/: gazebo.launch
src/mujoco_node/models/quadruped/meshes/: Abd1Link.STL  Abd2Link.STL  Abd3Link.STL  Abd4Link.STL  Hip1Link.STL  Hip2Link.STL  Hip3Link.STL  Hip4Link.STL  Knee1Link.STL  Knee2Link.STL  Knee3Link.STL  Knee4Link.STL  base_link.STL  toe2Link.STL  toe3Link.STL  toe4Link.STL
src/mujoco_node/models/quadruped/urdf/: quadruped.csv  quadruped.urdf  quadruped.xml  quadruped_foxglove.urdf
src/mujoco_node/src/: MujocoMsgHandler.cpp  mujoco_node.cpp  simulate.cc
src/my_publisher/: CMakeLists.txt  package.xml
src/my_publisher/src/: publisher_node.cpp
src/my_subscriber/: CMakeLists.txt  package.xml
src/my_subscriber/src/: subscriber_node.cpp
src/robot_hardware/: CMakeLists.txt  package.xml
src/robot_hardware/include/robot_hardware/: RobotHardwareNode.h
src/robot_hardware/include/robot_hardware/imu/: imu_yis320.h  serial.h
src/robot_hardware/include/robot_hardware/motor/: data_type.h  interface.h  motor_driver.h  tools.h  udp.h
src/robot_hardware/src/: RobotHardwareNode.cpp  main.cpp
src/robot_hardware/src/imu/: imu_yis320.cpp  serial.cpp
src/robot_hardware/src/motor/: interface.cpp  motor_driver.cpp  udp.cpp
src/robot_software/: CMakeLists.txt  package.xml
src/robot_software/include/robot_software/robot_FSM/: FiniteStateMachine.h  RobotFSMNode.h
src/robot_software/include/robot_software/robot_controller/: BallanceController.h  JointController.h  RobotControllerNode.h  SwingLegController.h
src/robot_software/include/robot_software/robot_controller/basic_controller/: JointController.h
src/robot_software/include/robot_software/robot_controller/nmpc_controller/: GeometricNmpc.h  GeometricNmpcNode.h  GeometricNmpc（复件）.h  KinoDynamicProblem.h  NmpcDdpCtrlNode.h  OptProblemBase.h
src/robot_software/include/robot_software/robot_estimator/: ESKF_SE3_simple.h  EskfOnSe3.h  LinearKalmanFilter.h  RobotEstimatorNode.h
src/robot_software/include/robot_software/robot_interface/: HardwareInterface.h  HardwareInterfaceNode.h  MujocoInterface.h  MujocoInterfaceNode.h  PinocchioInterface.h  PinocchioInterfaceNode.h  RobotRecordNode.h  UserInterfaceNode.h
src/robot_software/include/robot_software/robot_planning/: RobotBasePlanner.h  RobotJointPlanner.h  RobotLegPlanner.h  RobotPlanningNode.h
src/robot_software/include/robot_software/robot_utils/: CmdHandler.hpp  DataCenter.h  DataCenter.hpp  DataTypes.hpp  GaitSchedule.hpp  MatrixTypes.h  QuinticSpline.hpp  UtilFunc.h  data_types.hpp
src/robot_software/include/robot_software/robot_utils/communication/: KeyboardCmdHandler.hpp  UserDataHandler.hpp
src/robot_software/src/: main.cpp
src/robot_software/src/backup/: KinoDynamicProblem.cpp  NmpcDdpCtrlNode.cpp  OptProblemBase.cpp
src/robot_software/src/robot_FSM/: FiniteStateMachine.cpp  RobotFSMNode.cpp
src/robot_software/src/robot_controller/: BallanceController.cpp  JointController.cpp  RobotControllerNode.cpp  SwingLegController.cpp
src/robot_software/src/robot_controller/basic_controller/: BallanceController.cpp  JointController.cpp  SwingLegController.cpp
src/robot_software/src/robot_controller/nmpc_controller/: GeometricNmpc.cpp  GeometricNmpcNode.cpp  GeometricNmpc（复件）.cpp  KinoDynamicProblem.cpp  NmpcDdpCtrlNode.cpp  OptProblemBase.cpp
src/robot_software/src/robot_estimator/: EskfOnSe3.cpp  LinearKalmanFilter.cpp  RobotEstimatorNode.cpp
src/robot_software/src/robot_interface/: HardwareInterface.cpp  HardwareInterfaceNode.cpp  MujocoInterface.cpp  MujocoInterfaceNode.cpp  PinocchioInterface.cpp  PinocchioInterfaceNode.cpp  RobotRecordNode.cpp  UserInterfaceNode.cpp
src/robot_software/src/robot_planning/: RobotBasePlanner.cpp  RobotJointPlanner.cpp  RobotLegPlanner.cpp  RobotPlanningNode.cpp
